--- a/resources/scss/main.scss
+++ b/resources/scss/main.scss
@@ -257,6 +257,7 @@ button {
     font-size: 1.2rem;
     z-index: 2;
     cursor: pointer;
+    white-space: nowrap;
   }
   i {
     font-size: 1.2em;
